--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -43,8 +43,8 @@ header nav ul li {
     margin-left: 25px;
 }
 /* End Header styles */
-/* End Header styles */
 
+/* Begin utility styles */
 a {
     color: #ffffff;
     text-decoration: none;
@@ -52,15 +52,6 @@ a {
 
 p {
     font-size: 16px;
-}
-
-.hero {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
 }
 
 .float-left {
@@ -72,7 +63,17 @@ p {
     float: right;
     margin-left: 25px;
 }
+/* End utility styles */
+.hero {
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-size: cover;
+    background-position: center;
+}
 
+/* Content Section */
 .content {
     width: 75%;
     display: inline-block;
