Fixed footer color bug, updated Readme, removed extra comments.

--- a/web/assets/css/style.css
+++ b/web/assets/css/style.css
@@ -4,6 +4,7 @@
     margin: 0;
 }
 
+/* Begin utility styles */
 body {
     background-color: #d9dcd6;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -18,8 +19,9 @@ a {
 p {
     font-size: 16px;
 }
+/* End Utility Styles */
 
-/* Begin Header styles */
+/* Begin Header styles - everything in Header including nav */
 header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
@@ -40,7 +42,6 @@ header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
-    /*font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;*/
     font-size: 20px;
 }
 
@@ -52,11 +53,20 @@ header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
-/* End Header styles */
+/* End Header including nav styles */
 
-/* Begin utility styles */
+/* Begin Hero */
+.hero {
+    height: 800px;
+    width: 100%;
+    margin-bottom: 25px;
+    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-size: cover;
+    background-position: center;
+}
+/* End Hero */
 
-
+/* Begin Online Marketing Types */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -66,17 +76,7 @@ header nav ul li {
     float: right;
     margin-left: 25px;
 }
-/* End utility styles */
-.hero {
-    height: 800px;
-    width: 100%;
-    margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
-    background-size: cover;
-    background-position: center;
-}
 
-/* Online Marketing Types Section */
 .online-marketing {
     width: 75%;
     display: inline-block;
@@ -87,7 +87,6 @@ header nav ul li {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
-    /*font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;*/
     background-color: #0072bb;
 }
 
@@ -99,8 +98,9 @@ header nav ul li {
     margin-bottom: 20px;
     font-size: 36px;
 }
+/* End Online Marketing Types */
 
-/* Benefits */
+/* Begin Benefits */
 .benefits {
     margin-right: 20px;
     padding: 20px;
@@ -108,7 +108,6 @@ header nav ul li {
     float: right;
     width: 20%;
     height: 100%;
-    /*font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;*/
     background-color: #2589bd;
 }
 
@@ -126,14 +125,18 @@ header nav ul li {
     margin: 10px auto;
     max-width: 150px;
 }
+/* End Benefits /*
 
+/* Begin Footer */
 footer {
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: center;
+    color: #000;
 }
 
 footer h2 {
     font-size: 20px;
 }
+/* End Footer */
